# whatz-it

./: PROJECT_PLAN.md  README.md  app.json  package-lock.json  package.json
modules/whatz-it-live-overlay/: nitro.json  package.json  react-native.config.js
modules/whatz-it-live-overlay/android/: CMakeLists.txt  build.gradle  fix-prefab.gradle
modules/whatz-it-live-overlay/android/src/main/cpp/: cpp-adapter.cpp
modules/whatz-it-live-overlay/android/src/main/java/com/margelo/nitro/whatzit/liveoverlay/: HybridLiveOverlayOutputFactory.kt  WhatzItLiveOverlayPackage.kt
modules/whatz-it-live-overlay/android/src/main/java/com/whatzit/liveoverlay/: HybridLiveOverlayOutput.kt  LiveOverlayRenderer.kt  LiveVideoWriter.kt
scripts/: create-transition-gif.py  generate-sounds.py
src/app/: _layout.tsx  game.tsx  index.tsx  ready.tsx  results.tsx
src/components/: close-button.tsx  confirmation-prompt.tsx  deck-card.tsx  landscape-viewport.tsx  orientation-transition.tsx  recording-indicator.tsx  round-video-player.tsx  screenshot-transition-provider.tsx  timer-picker.tsx
src/data/: decks.ts  packs.ts
src/game/: game-reducer.test.ts  game-reducer.ts  game-types.ts  round-context.tsx  round-duration.ts  round-live-volume.test.ts  round-sound-receipts.test.ts  round-timer.test.ts  shuffle.ts  silent-switch-policy.test.ts  tilt-detector.ts
src/hooks/: use-forehead-position.ts  use-portrait-orientation.ts  use-portrait-screen.ts  use-round-timer.ts  use-tilt-controls.ts
src/storage/: preferences.ts  settings-return.ts
src/theme/: index.ts
src/types/: deck.ts
(+28 files in other folders)
